--- a/Learn2Code2/src/main/webapp/css/local.css
+++ b/Learn2Code2/src/main/webapp/css/local.css
@@ -131,3 +131,7 @@ html {
 		padding-left: 1%; 
 	}
 }
+
+.yes-scroll {
+	overflow-y: scroll;
+}
